--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-lazyload": "^3.2.1",
     "react-router-dom": "^7.0.2",
     "react-toastify": "^11.0.2"
   },
