implementado a funcionalidade de autenticação do login do admin, com validação do token JWT

--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,5 @@ CLDN_NAME = "dbtmhhzsn"
 CLDN_API_KEY = "876526272713189"
 CLDN_SECRET_KEY = "Qf7yd0lMNQx_k6C8Fhz8eIRu0Lo"
 JWT_SECRET= "usernone"
+ADMIN_EMAIL = "admin25@gmail.com"
+ADMIN_PASS= "Admin123"
