--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.12.0",
     "nodemon": "^3.1.9",
+    "sequelize": "^6.37.5",
     "stripe": "^17.5.0",
     "validator": "^13.12.0"
   }
