ajuste do backend para produção feito

--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
+    "express-fileupload": "^1.5.2",
+    "fileupload": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
     "multer": "^1.4.5-lts.1",
