implementado o dashboard do painel administrativo

--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "chart.js": "^4.5.1",
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
@@ -27,6 +28,7 @@
     "nodemon": "^3.1.9",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
+    "react-chartjs-2": "^5.3.1",
     "sequelize": "^6.37.7",
     "stripe": "^17.5.0",
     "validator": "^13.15.15"
