--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,7 @@
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "express-fileupload": "^1.5.2",
-    "fileupload": "^1.0.0",
+    "fileupload": "^0.2.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
     "multer": "^1.4.5-lts.1",
@@ -31,6 +31,7 @@
     "react-chartjs-2": "^5.3.1",
     "sequelize": "^6.37.7",
     "stripe": "^17.5.0",
-    "validator": "^13.15.15"
+    "validator": "^13.15.15",
+    "zod": "^4.1.12"
   }
 }
