--- a/admin/package.json
+++ b/admin/package.json
@@ -13,9 +13,11 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/typography": "^0.5.15",
     "axios": "^1.7.9",
+    "framer-motion": "^12.23.24",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.1.1",
     "react-toastify": "^11.0.2"
   },
