--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-lazyload": "^3.2.1",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.0.2",
     "react-slick": "^0.31.0",
     "react-toastify": "^11.0.2",
